# battle-tanks

./: .gitignore
BattleTank/: BattleTank.workspace  BattleTankCodeCompletionFolders.txt  BattleTankCodeLitePreProcessor.txt  CMakeLists.txt
BattleTank/Config/: DefaultEngine.ini  DefaultGame.ini  DefaultInput.ini
BattleTank/Content/: Landscape.uasset  MainMenu.uasset
BattleTank/Content/StarterContent/Maps/: Minimal_Default.umap
BattleTank/Content/Tank/: BattleTankGameMode_BP.uasset  PlayerTankController_BP.uasset  Projectile_BP.uasset  Tank_BP.uasset  Track.uasset  tank_fbx_Barrel.uasset  tank_fbx_Body.uasset  tank_fbx_Track.uasset  tank_fbx_Turret.uasset
BattleTank/Content/Terrain_sharedassets/: Dirt_LayerInfo.uasset  Grass_LayerInfo.uasset
BattleTank/Content/UI/: 151209-M-MS784-532.uasset  MainMenu.uasset  MainMenu_BP.uasset  PlayerUI_BP.uasset  inktank.uasset  inktank_Font.uasset
BattleTank/Content/_Levels/: MainMenu.umap
BattleTank/Source/BattleTank/Private/: Projectile.cpp  Tank.cpp  TankAIController.cpp  TankAimingComponent.cpp  TankBarrel.cpp  TankMovementComponent.cpp  TankPlayerController.cpp  TankTrack.cpp  TankTurret.cpp
BattleTank/Source/BattleTank/Public/: Projectile.h  Tank.h  TankAIController.h  TankAimingComponent.h  TankBarrel.h  TankMovementComponent.h  TankPlayerController.h  TankTrack.h  TankTurret.h
